W-18087604: Remove dead code related to chains building with ProcessorBuilder (#14297)
* Also remove unused factories in spring-config module